Name:                gloss-examples
Version:             1.13.0.4
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.10
Stability:           experimental
Category:            Graphics
Homepage:            http://gloss.ouroborus.net
Bug-reports:         gloss@ouroborus.net
Description:
        Examples using the gloss graphics library.
        A mixed bag of fractals, particle simulations and cellular automata.

Synopsis:
        Examples using the gloss library

Flag llvm
  Description:  Compile via LLVM. This produces much better object code
                but your GHC needs to have been built against the LLVM compiler.

  Default:      False

source-repository head
  type:           git
  location:       https://github.com/benl23x5/gloss

source-repository this
  type:         git
  tag:          v1.13.0.2
  location:     https://github.com/benl23x5/gloss

Executable gloss-bitmap
  Main-is:        Main.hs
  hs-source-dirs: picture/Bitmap
  Build-depends:
          base
        , bytestring
        , bmp
        , gloss

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-boids
  Main-is:        Main.hs
  hs-source-dirs: picture/Boids

  other-modules:
        Vec2
        KDTree2d

  Build-depends:
          base
        , random
        , gloss

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -threaded
        -rtsopts


Executable gloss-clock
  Main-is:        Main.hs
  hs-source-dirs: picture/Clock

  Build-depends:
          base
        , gloss

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-color
  Main-is:        Main.hs
  hs-source-dirs: picture/Color

  Build-depends:
          base
        , gloss
        , vector

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-conway
  Main-is:        Main.hs
  hs-source-dirs: picture/Conway

  other-modules:
        Cell
        World

  Build-depends:
          base
        , random
        , gloss
        , vector

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-draw
  Main-is:        Main.hs
  hs-source-dirs: picture/Draw

  Build-depends:
          base
        , gloss

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-easy
  Main-is:        Main.hs
  hs-source-dirs: picture/Easy

  Build-depends:
          base
        , gloss

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-eden
  Main-is:        Main.hs
  hs-source-dirs: picture/Eden

  other-modules:
        Cell
        Community
        World

  Build-depends:
          base
        , gloss
        , random

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-flake
  Main-is:        Main.hs
  hs-source-dirs: picture/Flake

  Build-depends:
          base
        , gloss

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-gameevent
  Main-is:        Main.hs
  hs-source-dirs: picture/GameEvent

  Build-depends:
          base
        , gloss

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-hello
  Main-is:        Main.hs
  hs-source-dirs: picture/Hello

  Build-depends:
          base
        , gloss

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-lifespan
  Main-is:        Main.hs
  hs-source-dirs: picture/Lifespan

  other-modules:
        Cell
        Community
        World

  Build-depends:
          base
        , gloss
        , random

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-machina
  Main-is:        Main.hs
  hs-source-dirs: picture/Machina

  Build-depends:
          base
        , gloss

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-occlusion
  Main-is: Main.hs
  hs-source-dirs: picture/Occlusion

  other-modules:
        Cell
        World
        State
        Data

  Build-depends:
          base
        , gloss
        , gloss-algorithms

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -threaded
        -rtsopts


Executable gloss-styrene
  Main-is:        Main.hs
  hs-source-dirs: picture/Styrene

  other-modules:
        Actor
        Advance
        Collide
        Config
        Contact
        QuadTree
        World

  Build-depends:
          base
        , containers
        , ghc-prim
        , gloss

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-tree
  Main-is:        Main.hs
  hs-source-dirs: picture/Tree

  Build-depends:
          base
        , gloss

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-visibility
  Main-is:        Main.hs
  hs-source-dirs: picture/Visibility

  other-modules:
        Draw
        Geometry.Randomish
        Geometry.Segment
        Interface
        State
        World

  Build-depends:
          base
        , gloss
        , vector

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-zen
  Main-is:        Main.hs
  hs-source-dirs: picture/Zen

  Build-depends:
          base
        , gloss

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-graph
  Main-is:        Main.hs
  hs-source-dirs: picture/Graph

  Build-depends:
          base
        , containers
        , random
        , gloss

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-gravity
  Main-is:        Main.hs
  hs-source-dirs: picture/Gravity

  Build-depends:
          base
        , containers
        , random
        , gloss

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-render
  Build-depends:
        base
        , containers
        , gloss
        , gloss-rendering
        , GLFW-b
  Main-is:        Main.hs
  hs-source-dirs: picture/Render
  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts
